# ats-ai

./: .env  .gitignore  .pre-commit-config.yaml  Changelog.md  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  frontend.py  main.py  pyproject.toml  requirements.txt  server.py  start.sh
.streamlit/: config.toml
Backend/: Dockerfile  llm_chain_agent.py  parse_jd.py  requirements.txt  server.py
Frontend/: .dockerignore  Dockerfile  frontend.py  requirements.txt  test_frontend.py
LLM_CHAIN/: llm_chain_agent.py  parse_jd.py
ats_ai/: app_server.py  frontend_calls.py  hi.py  pdf_generator.py  scraper.py  streamlit_app.py
backened/: .swp  requirements.txt
frontened/: app.py
jd_folder/: Associate_Functional_Consultant_(CA_Inter).docx  BI_Lead.docx  Business_Analyst.docx  Data_Engineer.docx  Desktop_Engineer.docx  Finance_Manager.docx  Full_Stack_Technical_Lead.docx  Internal_Communication_Executive.docx  Lead_Consultant_-_SAP_FICO.docx  Lead_DevOps_Engineer.docx  Lead_Technical_Consultant_(OIC).docx  ML_Ops_Engineer.docx  Oracle_EBS_Manufacturing_Functional_Consultant.docx  Oracle_ERP_-_Presales.docx  Oracle_ERP_Practice_Consultant.docx  Oracle_Finance_Functional_Consultant.docx  Oracle_HCM_Cloud_Functional_Consultant.docx  Presales_Manager_-_Software_Engineering.docx  Product_Manager.docx  Project_Manager_(Oracle_ERP).docx  QA_Engineer_(PythonGolang).docx  Senior_Oracle_Financial_Functional_Consultant.docx  Senior_Software_Engineer_(Python).docx  Senior_Software_Engineer_-_Gen_AI_Bengaluru.docx  Senior_Software_Engineer_–_Gen_AI_Pune.docx  (+6 more)
(+66 files in other folders)
