[project]
name = "ats_ai"
version = "0.2.0"
description = "AI driven HR app"
authors = [
    {name = "Ram Dorak",email = "ram.dorak@calfus.com"},
    {name = "Shivanjali belge",email = "shivanjali.belge@calfus.com"},
    {name = "Prashant Kumar",email = "prashant.kumar@calfus.com"},
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.46.1,<2.0.0)",
#    "ollama (>=0.5.1,<0.6.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "google-genai (>=1.26.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.2.0"

